# kursach_django

./: README.md  groups.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
mailing/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_mailingattempt_message_remove_massage_owner_and_more.py  0003_client_owner_alter_mailing_owner_message_owner_and_more.py
mailing/templates/mailing/: client_list.html  mailing_list.html  message_list.html
main/: urls.py  views.py
main/templates/main/: index.html
static/css/: bootstrap-utilities.min.css.map  bootstrap.css
static/js/: bootstrap.bundle.js  bootstrap.bundle.min.js.map
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: user_list.html
